<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_animation"
        android:title="@string/animation"
        android:icon="@drawable/ic_3d_rotation_white"
        app:showAsAction="always"/>

    <item
        android:id="@+id/menu_ar"
        android:title="@string/augmented_reality"
        android:icon="@drawable/ic_filter_center_focus_white"
        app:showAsAction="always"/>

    <item
        android:id="@+id/menu_texture"
        android:title="@string/texture"
        app:showAsAction="always"
        android:icon="@drawable/ic_color_lens_white"
        tools:ignore="AlwaysShowAction" />

    <item
        android:id="@+id/menu_help"
        android:title="@string/ayuda"
        app:showAsAction="never"
        android:icon="@drawable/ic_arrow_drop_up_white"
        tools:ignore="AlwaysShowAction" />

    <item
        android:id="@+id/menu_hide"
        android:title="@string/ocultar_barra"
        app:showAsAction="never"
        android:icon="@drawable/ic_arrow_drop_up_white"
        tools:ignore="AlwaysShowAction" />

</menu>